syntax = "proto3";

package proto.users;

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string updated_at = 5;
    string created_at = 6;
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string confirm_email = 3;
}

message CreateUserResponse {
    string id = 1;
    string username = 2;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}
